# proto-cp

./: .clang-format  CMakeLists.txt  Dockerfile  compose.yml  docker-user-entry.sh  research.ipynb  run-cli-gdb.sh  run-cli-valgrind.sh  run-cli.sh  stat1.csv  stat2.csv  stat3.csv  task.md  test-p2p-docker.sh  test-p2p.sh
docs/: .$diagrams.drawio.bkp  .gitignore  01-definitions.aux  02-abbreviations.aux  03-introduction.aux  03-introduction.tex  04-analysis.aux  04-analysis.tex  05-design.aux  05-design.tex  06-implementation.aux  06-implementation.tex  07-research.aux  07-research.tex  08-conclusion.aux  08-conclusion.tex  09-appendix.aux  09-appendix.tex  biblio.bib  coursework.bbl  coursework.tex  diagrams.drawio  task.md
docs/inc/diag/: msg-types.puml  seq-2.puml  seq-3.puml
docs/inc/lst/: invite  invite-clnt  invite-srv  invite-worker
docs/tz/: tz.aux  tz.blg  tz.fdb_latexmk  tz.fls  tz.run.xml  tz.tex
src/example/: invitee.c  inviter.c  main.c
src/selecon/: avutility.c  avutility.h  cert.c  cert.h  config.h  connection.c  connection.h  context.h  debugging.h  endpoint.c  endpoint.h  error.c  error.h  invite.c  invite.h  media_filters.c  media_filters.h  media_profile.c  media_profile.h  message.c  message.h  participant.c  participant.h  role.c  role.h  selecon.c  selecon.h  stime.h  stream.c  stream.h  stypes.h  verify.c  verify.h  version.h
src/selecon_cli/: dev_io.c  dev_io.h  dump.c  dump.h  main.c  stats.c  stats.h  stub.c  stub.h
src/tests/: multi.cpp  p2p.cpp
